--- a/ecommerce_app/pubspec.yaml
+++ b/ecommerce_app/pubspec.yaml
@@ -12,17 +12,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_launcher_icons: 0.14.1
-  intl: 0.19.0
-  flutter_layout_grid: 2.0.7
+  flutter_launcher_icons: ^0.14.3
+  intl: ^0.20.2
+  flutter_layout_grid: ^2.0.8
   flutter_rating_bar: 4.0.1
-  go_router: 14.4.1
+  go_router: ^15.0.0
   riverpod: 2.6.1
   flutter_riverpod: 2.6.1
   riverpod_annotation: 2.6.1
   rxdart: 0.28.0
-  sembast: 3.7.5
-  sembast_web: 2.4.0
+  sembast: ^3.8.5
+  sembast_web: ^2.4.1
   path_provider: 2.1.5
 
 dev_dependencies:
@@ -32,10 +32,10 @@ dev_dependencies:
     sdk: flutter    
   flutter_lints: 5.0.0
   mocktail: 1.0.4
-  build_runner: 2.4.13
-  riverpod_generator: 2.6.2
-  custom_lint: 0.7.0
-  riverpod_lint: 2.6.2
+  build_runner: ^2.4.15
+  riverpod_generator: ^2.6.5
+  custom_lint: ^0.7.5
+  riverpod_lint: ^2.6.5
 
 # Custom app icon. For more info see: https://pub.dev/packages/flutter_launcher_icons
 flutter_icons:
