--- a/ecommerce_app/pubspec.yaml
+++ b/ecommerce_app/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   intl: ^0.19.0 # Used for date and currency formatting
   flutter_layout_grid: ^2.0.8 # Used for content-sized items in the products grid layout
   flutter_rating_bar: ^4.0.1 # Used for the "leave a rating" feature
+  go_router: ^15.0.0
 
 dev_dependencies:
   flutter_test:
