--- a/ecommerce_app/pubspec.yaml
+++ b/ecommerce_app/pubspec.yaml
@@ -12,11 +12,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_launcher_icons: 0.14.1
-  intl: 0.19.0
-  flutter_layout_grid: 2.0.7
+  flutter_launcher_icons: ^0.14.3
+  intl: ^0.20.2
+  flutter_layout_grid: ^2.0.8
   flutter_rating_bar: 4.0.1
-  go_router: 14.4.1
+  go_router: ^15.0.0
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
